API fix for user privileges

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -44,7 +44,7 @@ verify:
     #port: 5432
     user: kloudone
     password: authnull@kloudone@2007
-    name: development
+    name: authnull_dev
     schema: did
     
 # ------------------------------------------------------
