API fix for user role

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,6 +1,6 @@
 # set the env to prod for production
 # set the env to dev for development
-env : prod
+env : verify
 # --------------------------------------------------
 
 # PROD PROPERTIES
